# oci-registry

./: .dockerignore  .gitlab-ci.yml  .rustfmt.toml  Cargo.toml  Dockerfile  Dockerfile.aarch64  Dockerfile.x86-64  LICENSE  Makefile  README.md  example.yaml  test.sh
benches/: main.rs
src/: api.rs  image.rs  lib.rs  main.rs  s3.rs  storage.rs  upstream.rs  util.rs
src/api/: error.rs  stream.rs
src/image/: error.rs
src/storage/: error.rs  filesystem.rs  s3.rs
src/storage/s3/: error.rs
testdata/: images.txt  requests.txt  s3cfg  upstream.yaml
tools/: generate-filesystem-profile  generate-profiles  generate-s3-profile  make-test-requests  maybe-download-sccache
