[package]
name = "oci-registry"
version = "0.2.0"
edition = "2021"

[profile.dev]
debug = 1

[profile.release]
debug = 1
strip = "symbols"
lto = "fat"

[dependencies]
actix-web = "4.2.1"
arcerror = "0.1.0"
arcstr = "1.1.4"
async-broadcast = "0.4.1"
async-stream = "0.3.3"
bytes = { version = "1.2.1", features = ["serde"] }
camino = "1.1.1"
clap = { version = "4.0.12", features = ["derive", "env"] }
compact_str = { version = "0.6.1", features = ["serde"] }
dkregistry = { version = "0.5.1-alpha.0", git = "https://github.com/mcronce/dkregistry-rs.git", default-features = false, features = ["reqwest-rustls"] }
futures = "0.3.24"
hex = "0.4.3"
humantime = "2.1.0"
lazy-regex = "2.3.0"
oci-spec = { version = "0.5.8", default-features = false, features = ["distribution", "image"] }
regex = "1.6.0"
rusoto_core = { version = "0.48.0", default-features = false, features = ["hyper-rustls", "flate2"] }
rusoto_credential = "0.48.0"
rusoto_s3 = { version = "0.48.0", default-features = false, features = ["rustls"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.86"
serde_with = { version = "2.0.1", features = ["hex"] }
sha2 = "0.10.6"
thiserror = "1.0.37"
tikv-jemallocator-global = { version = "0.5.0", features = ["tikv-jemallocator"] }
time = { version = "0.3.15", features = ["parsing"] }
tokio = { version = "1.21.2", features = ["fs", "io-util"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }

# TODO:  Once https://github.com/rusoto/rusoto/pull/1981 is merged, remove these.
[patch.crates-io]
rusoto_core = {git = "https://github.com/mcronce/rusoto.git", branch = "enable-http1"}
rusoto_credential = {git = "https://github.com/mcronce/rusoto.git", branch = "enable-http1"}
rusoto_s3 = {git = "https://github.com/mcronce/rusoto.git", branch = "enable-http1"}

